2005-02-20  Marc Singer  <elf@buici.com>

	* Makefile Revision in preparation for milestone2 release.

	* src/mach-lh7952x/drv-nor-cfi.c (NOR_1_LENGTH): added logic
	necessary to support the double bank of NOR flash on the LPD79524
	boards.
	(nor_init_chip): Changed initialization to properly cope with two
	banks (or a pair of identical chips).

2005-02-19  Marc Singer  <elf@buici.com>

	* src/arch-arm/lib/lib1funcs.S: Imported this file from kernel in
	order to get general purpose integer divide and modulo functions.
	
2005-02-18  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/init-lpd79520.c: Fixed SDRAM init to comply
	with Sharp recommendations in their SDRAM application note.
	Thanks to prplague :-).

2005-02-17  Marc Singer  <elf@buici.com>

	* src/arch-arm/lib/relocate.c: Implemented a simpler
	copy loop to help some platforms along.

2005-02-16  Marc Singer  <elf@buici.com>

	* src/mach-ixp42x/nslu2_config (CONFIG_ENV_REGION): Changed the
	environment region for the nslu2 so that it can be written without
	clobbering the second redboot block.

	* src/apex/cmd-copy.c (cmd_copy): Added a -v switch to copy which
	performs a double read of the source and a read after write of the
	destination to make sure the copy is correct.

	* src/mach-ixp42x/initialize.c (__section): Added DEBUG_LL
	support.

	* src/apex/cmd-compare.c (cmd_compare): Added -c switch to compare
	so we can see more than one difference in a block.

2005-02-15  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/serial.c Errors in the UART macros prevented
	serial output on the 79520.

2005-02-14  Marc Singer  <elf@buici.com>

	* Makefile 1.0.25: for good measure

2005-02-12  Marc Singer  <elf@buici.com>

	* Makefile 1.0.24 for debug_ll changes

2005-02-12  Marc Singer  <elf@cerise.buici.com>

	* Makefile: Moved the compiler declarations to the config files.

	* include/debug_ll.h: Added low-level debug support via the serial
	console.

2005-02-11  Marc Singer  <elf@buici.com>
