@@ -54,8 +54,8 @@ CONFIG_CMD_SETENV=y
 CONFIG_CMD_COMPARE=y
 CONFIG_CMD_WAIT=y
 CONFIG_CMD_XRECEIVE=y
-#CONFIG_CMD_EMAC=y
 CONFIG_CMD_GO=y
+CONFIG_CMD_EMAC=y
 CONFIG_CMD_FILL=y
 
 CONFIG_ATAG=y
@@ -65,8 +65,8 @@ CONFIG_ARCH_NUMBER=609
 #CONFIG_DRIVER_NAND=y
 CONFIG_DRIVER_NOR=y
 #CONFIG_RELOCATE_NAND=y
-#CONFIG_DRIVER_CPLD_SPI=y
-#CONFIG_DRIVER_EMAC=y
+CONFIG_DRIVER_CPLD_SPI=y
+CONFIG_DRIVER_EMAC=y
 
 #CONFIG_NAND_LPD=y
 
