@@ -1,3 +1,8 @@
+2005-02-21  Marc Singer  <elf@buici.com>
+
+	* src/mach-lh7952x/drv-emac.c: Cleanup of the driver.  Better
+	control over compile options.  Added help and report features.
+ 
 2005-02-20  Marc Singer  <elf@buici.com>
 
 	* Makefile Revision in preparation for milestone2 release.
